kubernetes/apps/apps/paperless-ngx/paperless-ngx/app/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless
  name: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless
        app.kubernetes.io/part-of: paperless
    spec:
      containers:
        - image: harbor.cloud.traunseenet.com/ghcr.io/paperless-ngx/paperless-ngx:3.3.0@sha256:6b94799bc769a063b3340cc5847402e626d4d91d29a295a8e747f8e9bead4207
          name: paperless
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-data
              subPath: data
            - mountPath: /usr/src/paperless/media
              name: paperless-data
              subPath: media
            - mountPath: /usr/src/paperless/export
              name: paperless-data
              subPath: export
            - mountPath: /usr/src/paperless/consume
              name: paperless-data
              subPath: consume
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
