kubernetes/apps/apps/paperless-ngx/paperless-ngx/app/app/gotenberg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-gotenberg
  name: paperless-gotenberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-gotenberg
  template:
    metadata:
      labels:
        app: paperless-gotenberg
        app.kubernetes.io/part-of: paperless
    spec:
      containers:
        - image: harbor.cloud.traunseenet.com/docker.io/gotenberg/gotenberg:8.37@sha256:f29984bd1e226bf1b93ba90af06000afa8b315853e99d27b9aaa41b93f15c769
          name: gotenberg
          command:
            - "gotenberg"
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: paperless-gotenberg
  type: ClusterIP
