kubernetes/apps/apps/paperless-ngx/paperless-ngx/app/app/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-redis
  name: paperless-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-redis
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      containers:
        - image: harbor.cloud.traunseenet.com/docker.io/library/redis:8.10.1@sha256:8a1efc5f479551822b47424ccae982026b633f28818eab0387348120a61e10e2
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
spec:
  type: ClusterIP
  selector:
    app: paperless-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
