kubernetes/apps/apps/paperless-ngx/paperless-ngx/app/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
