kubernetes/apps/apps/paperless-ngx/paperless-ngx/app/app/tika.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-tika
  name: paperless-tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
        app.kubernetes.io/part-of: paperless
    spec:
      containers:
        - image: harbor.cloud.traunseenet.com/docker.io/apache/tika:3.3.1.0
          name: tika
          ports:
            - containerPort: 9998
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
spec:
  ports:
    - port: 9998
      protocol: TCP
      targetPort: 9998
  selector:
    app: paperless-tika
  type: ClusterIP
